--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
     <div class="container">
         <header class="header">
-            <img src="current full.png" alt="ALTIO Logo" class="logo" />
+            <img src="Final LOGO.webp" alt="ALTIO Logo" class="logo" />
             <h1>Clash Royale 1v1 Tournament<br />(SP-26)</h1>
             <p class="subtitle">
                 Organized by <strong>ALTIO – Association of Legacy & Innovation</strong>
@@ -667,6 +667,7 @@
         </footer>
     </div>
 </body>
+
 
 
 </html>
